# serializer version: 1
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_dab_scan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.arcam_fmj_127_0_0_1_dab_scan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'DAB scan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'DAB scan',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'dab_scan',
    'unique_id': '456789abcdef-1-dab_scan',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_dab_scan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) DAB scan',
    }),
    'context': <ANY>,
    'entity_id': 'button.arcam_fmj_127_0_0_1_dab_scan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_fm_scan_down-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.arcam_fmj_127_0_0_1_fm_scan_down',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FM scan down',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FM scan down',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fm_scan_down',
    'unique_id': '456789abcdef-1-fm_scan_down',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_fm_scan_down-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) FM scan down',
    }),
    'context': <ANY>,
    'entity_id': 'button.arcam_fmj_127_0_0_1_fm_scan_down',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_fm_scan_up-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': None,
    'entity_id': 'button.arcam_fmj_127_0_0_1_fm_scan_up',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'FM scan up',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'FM scan up',
    'platform': 'arcam_fmj',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fm_scan_up',
    'unique_id': '456789abcdef-1-fm_scan_up',
    'unit_of_measurement': None,
  })
# ---
# name: test_setup[AVR450][button.arcam_fmj_127_0_0_1_fm_scan_up-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Arcam FMJ (127.0.0.1) FM scan up',
    }),
    'context': <ANY>,
    'entity_id': 'button.arcam_fmj_127_0_0_1_fm_scan_up',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
